--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -3,59 +3,161 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@meilisearch/instant-meilisearch/templates/basic_search.css" />
+    <script src="https://kit.fontawesome.com/257e3ba356.js" crossorigin="anonymous"></script>
 </head>
   
   <body>
     <main id="app" class="main" @click="firstclick = true">
-      <ais-instant-search index-name="podcast" 
-      :search-client="searchClient">
-        <div class="barBlock">
-          <p class="title" :class="{ movingTitle: moveTitle}">
+      <ais-instant-search ref="instantSearch"
+        index-name="podcast"
+        :search-function="this.searchFunction"
+        :initial-ui-state="this.initialUiState"
+        :search-client="searchClient">
+        <div class="upBlock" :class="{ moveUpBlock: firstclick }">
+          <p class="title" :class="{ movingTitle: firstclick}">
              {{ title }}
           </p>
-          <ais-search-box :class="{ movingSearchbox: moveSearchBar }"
-            placeholder="Search for the Podcast ..." autofocus
+          <ais-search-box ref="searchBox" autofocus
+            :class="{ movingSearchbox: firstclick }"
+            placeholder="Search podcast as you type ..."
             :class-names="{
               'ais-SearchBox-submit': 'submitBtn',
               'ais-SearchBox-submitIcon': 'submitIcon',
               'ais-SearchBox': 'searchbox',
+              'ais-SearchBox-reset': 'resetBtn',
+              'ais-SearchBox-resetIcon': 'resetIcon',
             }"
           ></ais-search-box>
-          <ais-infinite-hits v-show="displayHits">
-            <template v-slot:item="{ item, index }">
-              <div class="singlehit"
-                @mousedown="previewURI = item.episode_uri"
-                @mouseout="previewURI = null">
-                <!-- <a href="http://localhost:5000/episode/${hit.episode_uri}"> -->
-                <div v-if="!preview" class="card">
-                  <div class="img">
-                    <img class="poster" :src="item.poster"/>
-                  </div>
-                  <div class="info">
-                    <p class="hit-episode">
-                      <ais-highlight 
-                        attribute="episode_name" 
-                        :hit="item" />
-                      {{ item.episode_name }}
-                    </p>
-                  </div>
+        </div>
+        <ais-infinite-hits ref="infiniteHits" v-show="firstclick"
+          :class="{ displayHits : firstclick }">
+          <template #default="{ items, isLastPage, refineNext }">
+            <div v-for="item in items" class="row"
+              @click="preview = item.episode_uri" 
+              @mouseover="focus = item.episode_uri"
+              @mouseleave="focus = null, preview = null"
+              :id="item.episode_uri" :ref="item.episode_uri"
+              :class="{ 
+                focusEpisode : lock === false && preview === null && focus === item.episode_uri,
+                previewEpisode : lock === false && preview === item.episode_uri,
+                fadeEpisode : lock === false && preview === null && focus === null && fade === item.episode_uri
+              }">
+              <div class="front">
+                <div class="img">
+                  <img class="poster" :src="item.poster" :ref="item.episode_uri+'poster'"
+                  :class="{
+                    previewPoster : lock === false && preview === item.episode_uri,
+                    fadePoster : lock === false && preview === null && focus === null && fade === item.episode_uri
+                  }"/>
+                  <a class="link" :href="'http://localhost:5000/episode/'+item.episode_uri">
+                    <img class="playInPoster" src="../static/play.png" v-if="preview === item.episode_uri" />
+                    <span class="hint">Listen full episode</span>
+                  </a>
                 </div>
-                <div v-if="previewURI === item.episode_uri">
-                  <p class="hit-publisher">
-                    {{ item.show_name }}
-                    <!-- ${instantsearch.highlight({ attribute: 'show_name', highlightedTagName: 'mark', hit })} -->
+                <div class="info">
+                  <p class="hit-showname" :ref="item.episode_uri+'showname'"
+                    :class="{ 
+                      previewShowname : lock === false && preview === item.episode_uri,
+                      fadeShowname : lock === false && preview === null && focus === null && fade === item.episode_uri
+                    }">
+                    <ais-highlight attribute="show_name" :hit="item" /> {{ item.show_name }}
                   </p>
-                  <p class="description">
-                    {{ item.episode_description }}
-                    <!-- ${instantsearch.highlight({ attribute: 'episode_description', highlightedTagName: 'mark', hit })} -->
+                  <p class="hit-publisher" :ref="item.episode_uri+'publisher'"
+                    :class="{ 
+                      previewPublisher : lock === false && preview === item.episode_uri,
+                      fadePublisher: lock === false && preview === null && focus === null && fade === item.episode_uri
+                    }">
+                    <ais-highlight attribute="publisher" :hit="item" /> {{ item.publisher }}
+                  </p>
+                  <p class="hit-episode" :ref="item.episode_uri+'episodename'"
+                    :class="{
+                      previewEpisodeName : lock === false && preview === item.episode_uri,
+                      fadeEpisodeName: lock === false && preview === null && focus === null && fade === item.episode_uri
+                    }">
+                    <ais-highlight attribute="episode_name" :hit="item" /> {{ item.episode_name }}
                   </p>
                 </div>
-                <!-- </a> -->
+                <div class="description" :ref="item.episode_uri+'description'"
+                  :class="{ previewDescription : lock === false && preview === item.episode_uri }">
+                  <ais-highlight attribute="episode_description" :hit="item" /> {{ item.episode_description }}
+                </div>
+                <div class="summary" :ref="item.episode_uri+'summary'"
+                  :class="{ previewSummary : lock === false && preview === item.episode_uri }">
+                  Auto Summarization:    
+                  <!-- <ais-highlight attribute="episode_summary" :hit="item" /> {{ item.episode_summary }} -->
+                </div>
+                <!-- audio player -->
+                <div class="audioPlayer" :ref="item.episode_uri+'player'" 
+                  :class="{ previewPlayer : preview == item.episode_uri }">
+                  <audio type="audio/mpeg" 
+                    :src="item.episode_audio+'.mp3'"
+                    :ref="item.episode_uri+'audio'"
+                    @timeupdate="updateTime(item.episode_uri)"
+                  ></audio>
+                  <span class="backward-icon">
+                    <i class="fas fa-backward fa-2x"
+                      @click="timeChange(item.episode_uri, -5)"
+                    ></i>
+                  </span>
+                  <span class="play-icon">
+                    <i class="fas fa-play-circle fa-3x" 
+                      @click="playAudio(item.episode_uri)"
+                      v-if="!playing"
+                    ></i>
+                    <i class="fas fa-pause-circle fa-3x" 
+                      @click="stopAudio(item.episode_uri)"
+                      v-if="playing"
+                    ></i>
+                    <span class="hint">play 30 sec preview</span>
+                  </span>
+                  <span class="forward-icon">
+                    <i class="fas fa-forward fa-2x"
+                      @click="timeChange(item.episode_uri, 5)"
+                    ></i>
+                  <span class="duration">
+                    {{ renderTime }}
+                  </span>
+                  <span class="volume-icon">
+                    <i class="fas fa-volume-up fa-2x"
+                      @click="volumeChange(item.episode_uri, 'mute')"
+                      v-if="volume === 'up'"
+                    ></i>
+                    <i class="fas fa-volume-down fa-2x"
+                      @click="volumeChange(item.episode_uri, 'up')"
+                      v-if="volume === 'down'"
+                    ></i>
+                    <i class="fas fa-volume-off fa-2x"
+                      @click="volumeChange(item.episode_uri, 'down')"
+                      v-if="volume === 'off'"
+                    ></i>
+                    <i class="fas fa-volume-mute fa-2x"
+                      @click="volumeChange(item.episode_uri, 'off')"
+                      v-if="volume === 'mute'"
+                    ></i>
+                  </span>
+                </div>
               </div>
-            </template>
-          </ais-infinite-hits>
+            </div>
+          </template>
+        </ais-infinite-hits>
+        <div class="downBlock" :class="{ moveDownBlock: firstclick }">
         </div>
       </ais-instant-search>
+      <!-- floating arrows -->
+      <div class="floatingArrow" v-show="firstclick" :class="{ displayArrow : firstclick }">
+        <span class="leftArrow" ref="leftArrow" v-show="scrollTop > 0"
+          @mouseover="focus = 'leftArrow'"
+          @mouseleave="focus = null"
+          @click="scrollPage('last')"
+          :class="{ focusArrow : focus === 'leftArrow' }"
+        > <i class="fas fa-chevron-circle-left fa-5x"></i> </span>
+        <span class="rightArrow" ref="rightArrow"
+          @mouseover="focus = 'rightArrow'"
+          @mouseleave="focus = null"
+          @click="scrollPage('next')"
+          :class="{ focusArrow : focus === 'rightArrow'} "
+        > <i class="fas fa-chevron-circle-right fa-5x"></i> </span>
+      </div>
     </main>
   </body>
     
@@ -69,5 +171,6 @@
   <script src="../static/vue.js"></script>
   <!-- local css -->    
   <link rel="stylesheet" href="../static/reset.css">
-  
+  <link rel="stylesheet" href="../static/card.css">
+  <link rel="stylesheet" href="../static/player.css">
 </html>
