--- a/main/static/demo3player.css
+++ b/main/static/demo3player.css
@@ -4,108 +4,85 @@ html, body {
   height: 100%;
   overflow: hidden;
   font-family: "Roboto", sans-serif;
+  background-color: #FCF7F4;
 }
-.leftframe{
-    padding: 1rem;
+.row{
+  display: flex;
+  flex-wrap: wrap;
 
-    /* background: #21212e;
-    left:5%;
-    top:10%;
-    bottom: 10%;
-    right: 35%;
-    border-radius: 1.5rem;
-    -webkit-filter: drop-shadow(0px 0px 12px #c9c9c9);
-    filter: drop-shadow(0px 0px 12px #c9c9c9);
-    
-    width: 60%;
-    float:left;
-    position:fixed; */
+  
+}
+.col{
+  flex-grow: 1;
+  /* Try to resize window < 600px */
+  min-width:200px;
+  /* Below is not important */
+  background-color:#FCF7F4 ;
+  /* color:#FCF7F4; */
+  margin:15px;
+  min-height:50vh;
+  text-align:center;
+  width: 100%;
+  height: 100%;
 }
 
-.panel{
-
-/*    width: auto;*/
-
-    /* height: 530px;
-    padding: 2rem; */
-
-    /*margin: 1rem;*/
-    /*    overflow: hidden;
-    background: white;
-    position: relative;
-    box-sizing: border-box;*/
-
-    /* background:#f1f4f7;
-    border-radius: 10px; */
-
-    background: #21212e;
-    left:5%;
-    top:10%;
-    bottom: 10%;
-    right: 35%;
-    border-radius: 1.5rem;
-    /* -webkit-filter: drop-shadow(0px 0px 12px #c9c9c9);
-    filter: drop-shadow(0px 0px 12px #c9c9c9); */
-    
-    width: 60%;
-    float:left;
-    position:fixed;
-
-}
-/* .leftdescription{
-  background: #f1f1f1;
-} */
-
-.container{ /*set invisible
-    /*width: 200px;*/
-    height: 1200px;
-/*    margin:  ;*/
+.container{ 
     overflow: hidden;
-    background: white;
     position: relative;
     box-sizing: border-box;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-/*    transition: all 0.5s ease-in-out;
+    background-color: #FCF7F4 ;
+    height: 100%;
+    width: 100%;
+    top: 10%;
+    margin-left:-250px;
+    /*    transition: all 0.5s ease-in-out;
     animation: marquee 10s linear infinite;*/
     
 }
 
-.marquee1 {
-    /*width: 200px;*/
-    padding: 0;
+/* .marquee1 { */
+    /* padding: 0;
     top: 0px;
     position: absolute;
     box-sizing: border-box;
-    /*animation: marquee 10s linear infinite;*/
     margin: 0 auto;
     text-align: center;
-    color: #ffffff;
+    color: #293844;
+    background-color: #FCF7F4 ;
     animation: marquee 26s linear infinite;
-    animation-delay: 13s;
-}
-.marquee2 {
-    /*width: 200px;*/
-    top: 0px;
-    padding: 0;
-    position: absolute;
-    box-sizing: border-box;
-    /*animation: marquee 10s linear infinite;*/
-    margin: 0 auto;
-    text-align: center;
-    color: #ffffff;
-    animation: marquee 26s linear infinite;
-}
+    animation-delay: 13s; */
+
+    /* margin: auto;
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+    width: 1000px; */
+/* } */
+
+/* .marquee1 .img{
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  transform: translateX(-50%);
+  display: none;
+} */
 
 img {
-    margin: 5rem;
-    border-radius: 1rem;
-    max-width: 100%;
-    /*max-height: 100%;*/
-      display: block;
-  margin-left: auto;
-  margin-right: auto;
+  border-radius: 1rem;
+  max-width: 100%;
+  display: block;
+  /* margin-top: 1000px; */
+
+  /* top: 0; */
+  /* left: 50%; */
+
+  /* position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  transform: translateX(-50%);
+  
+  display: none; */
+
 
 }
 #poster{
@@ -122,25 +99,54 @@ img {
 
 .buttons {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 1em 0;
-  margin-left: 40%;
+    flex-direction: row;
+    justify-content: space-around;
+    /* padding: 1em 0; */
+    /* margin-top: -100px; */
+    /* margin-left: 40%; */
+    margin-left: 300px;
+    /* margin-top:-250px; */
+    z-index: 3;
 }
 .neu {
-  /* box-shadow: -5px -5px 15px 0px #ffffff9e, 5px 5px 15px 0px #a3b1c6a8; */
+ 
+
+  box-shadow: -5px -5px 15px 0px #ffffff9e, 5px 5px 15px 0px #a3b1c6a8;
   background: #e0e5ec;
-  border-radius: 2em;
+  border-radius: 1em;
   border: 0;
+  z-index: 3;
 }
 
-.btn {
+
+.btn-success{
+  /* background-color: #68889E !important; 
+  color:#FFF !important;
+  border-color: #2F3E48 !important; */
+  width:100px;
+  height:50px;
+  
+}
+
+
+
+/* .btn-success:hover, .btn-success:active, .btn-success:visited {
+  background-color: white !important; 
+  color:white !important;
+  border-color: white !important;
+} */
+
+.pbtn {
   padding: 15px;
+  /* margin-top: -50px; */
+  margin-top: -250px;
+  margin-left: 300px;
   border-radius: 30px;
   color: #7e8a98;
   /* color: #f1f1f1; */
   outline: none;
   cursor: pointer;
+  position: fixed;
 }
 .btn.lg {
   font-size: 1em;
@@ -156,6 +162,7 @@ img {
 .track {
   margin-top: 2rem;
   height: 10px;
+  bottom: 300px;
 }
 .track div{
   width: 50%;
@@ -163,6 +170,9 @@ img {
   background: #7e8a98;
   opacity: 0.75;
   border-radius: 15px;
+}
+.currentTime{
+  margin-right: 100%;
 }
 .durationTime {
   margin-left: 90%;
@@ -206,4 +216,72 @@ img {
   /*font-weight: 700;*/
   /*line-height: 1.333;*/
   transition: 0.4s ease-out;
+}
+.kw-tag {
+  color:  white;
+  /*background-color: #e0e5ec;*/
+  margin-left: 5px;
+  padding: 3px;
+  border-radius: 7px;
+  font-size: 12px;
+}
+.tooltip-inner {
+  font-family: Arial,sans-serif
+  font-weight: bold;
+  background-color: #eeeeee !important;
+  box-shadow: 0px 0px 5px white;
+  
+  color: #000;
+  /*padding: 0;*/
+}
+/*
+.tooltip-arrow {
+  border-top-color: #FFFFFF !important;
+}*/
+.tooltip.bs-tooltip-top .tooltip-arrow::before {
+      border-top-color: #eeeeee;
+}
+.tooltip.show {
+  opacity: 0.9;
+}
+
+.list-complete-item {
+  transition: all 1s;
+  display: inline-block;
+  margin-right: 10px;
+}
+.list-complete-enter{
+  opacity: 0;
+  transform: translateX(30px);
+}
+
+.list-complete-leave-to{
+  opacity: 0;
+  transform: translateX(-30px);
+}
+.list-complete-leave-active {
+  position: absolute;
+}
+
+
+.slideshow {
+  top: 170px;
+  left: 20px;
+  margin: auto;
+  position: relative;
+  /* position: ; */
+  overflow: hidden;
+  height: 900px;
+  width: 900px;
+  z-index: 3;
+}
+.slideshow img {
+  position: absolute;
+  height: 50%;
+  /* width: 50%px; */
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+  z-index: 3;
 }
