--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -15,7 +15,7 @@
         :search-client="searchClient">
         <div class="upBlock" :class="{ moveUpBlock: firstclick }">
           <p class="title" :class="{ movingTitle: firstclick}">
-             {{ title }}
+             [[ title ]]
           </p>
           <ais-search-box ref="searchBox" autofocus
             :class="{ movingSearchbox: firstclick }"
@@ -80,30 +80,30 @@
                       previewShowname : lock === false && preview === item.episode_uri,
                       fadeShowname : lock === false && preview === null && focus === null && fade === item.episode_uri
                     }">
-                    <ais-highlight attribute="show_name" :hit="item" /> {{ item.show_name }}
+                    <ais-highlight attribute="show_name" :hit="item" /> [[ item.show_name ]]
                   </p>
                   <p class="hit-publisher" :ref="item.episode_uri+'publisher'"
                     :class="{ 
                       previewPublisher : lock === false && preview === item.episode_uri,
                       fadePublisher: lock === false && preview === null && focus === null && fade === item.episode_uri
                     }">
-                    <ais-highlight attribute="publisher" :hit="item" /> {{ item.publisher }}
+                    <ais-highlight attribute="publisher" :hit="item" /> [[ item.publisher ]]
                   </p>
                   <p class="hit-episode" :ref="item.episode_uri+'episodename'"
                     :class="{
                       previewEpisodeName : lock === false && preview === item.episode_uri,
                       fadeEpisodeName: lock === false && preview === null && focus === null && fade === item.episode_uri
                     }">
-                    <ais-highlight attribute="episode_name" :hit="item" /> {{ item.episode_name }}
+                    <ais-highlight attribute="episode_name" :hit="item" /> [[ item.episode_name ]]
                   </p>
                 </div>
                 <div class="description" :ref="item.episode_uri+'description'"
                   :class="{ previewDescription : lock === false && preview === item.episode_uri }">
-                  <ais-highlight attribute="episode_description" :hit="item" /> {{ item.episode_description }}
+                  <ais-highlight attribute="episode_description" :hit="item" /> [[ item.episode_description ]]
                 </div>
                 <div class="summary" :ref="item.episode_uri+'summary'"
                   :class="{ previewSummary : lock === false && preview === item.episode_uri }">
-                  <br>&nbsp;&nbsp;&nbsp; <ais-highlight attribute="summary" :hit="item" /> {{ item.summary }}
+                  <br>&nbsp;&nbsp;&nbsp; <ais-highlight attribute="summary" :hit="item" /> [[ item.summary ]]
                   <p class="summary-tag">summarization by NLP model</p>
                 </div>
               </div>
