--- a/main/templates/demo3player.html
+++ b/main/templates/demo3player.html
@@ -35,7 +35,7 @@
     <!-- player CSS/JS -->
     <!-- <link href="./podcast_recommendation/frontend/subpage2/static/demo3player.css" rel="stylesheet"> -->
     <!-- <link href="C:\Users\Jenny\podcast_recommendation\frontend\subpage2\static\demo3player.css" rel="stylesheet"> -->
-    <link href="/static/demo3player.css?v=37" rel="stylesheet">
+    <link href="/static/demo3player.css?v=89" rel="stylesheet">
 
 
 </head>
@@ -45,52 +45,11 @@
     <div class="container-fluid" style="background-color: #FCF7F4 ; height: 100%;">
         <div class="row">
             <div class="col">
-                <!-- <div class="col-md-12 panel"> -->
                 <p
                     style="position: absolute; width: 492px; height: 93px; left: 0px; top: 0px; font-family: Roboto; font-style: normal; font-weight: normal; font-size: 30px; line-height: 93px; color: #293844;">
                     <b>PRSystem</b>
                 </p>
-
-                <!-- <nav class="navbar navbar-light bg-light" style="left: 300px;">
-                        <div class="container-fluid">
-                            <form class="d-flex">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 1000px;">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
-                            </form>
-                        </div>
-                    </nav> -->
-
-                <!-- <div class="panel2"
-                        style="position: absolute; width: 1500px; height: 800px; left: 250px; top: 130px; background:#293844 ; border-radius: 20px; z-index: 1;">
-                    </div> -->
-
-                <!-- <div class="row" style="height:75%">
-                        <div class="col-md-4" style="margin-top: 40px; z-index: 2;">
-                            <img alt="Bootstrap Image Preview" src="{{ message["poster"] }}"
-                                style="width: 400px;margin: 100px 300px; z-index: 2;">
-                          
-                        </div>
-                        <div class="col-md-8" style="z-index: 2; margin-top: -430px; margin-left:1000px ;">
-                            <div class="jumbotron">
-                              
-                                <h2 class="post-title" style="color:#f1f1f1  ; z-index: 2;">
-                                    {{ message["episode_name"] }}
-                                </h2>
-                             
-                                <p class="post-title"
-                                    style="word-wrap: break-word;overflow: hidden;height: 150px;color: #f1f1f1;z-index: 2;">
-                                    {{ message["episode_description"] }}
-                                   
-                                </p>
-
-
-                            </div>
-                        </div>
-                    </div> -->
-
-
-                <!-- <div class="container"> -->
-                <div class="slideshow">
+                <div class="slideshow" style=" position: relative; overflow: hidden;">
                     <img src="https://dummyimage.com/320x240/fff/fff.jpg&text=1" id="image1" data-bgcolor="#317a5c">
 
 
@@ -137,35 +96,43 @@
 
 
                 </div>
-                <!-- </div> -->
 
 
                 <div class="row">
-                    <div class="col-md-2" style="z-index: 3;">
+                    <!-- <div class="col-md-2" style="z-index: 3;">
                         <button class="pbtn lg neu buttons"><i class="fas fa-fast-backward"></i></button>
 
-                    </div>
+                    </div> -->
                     <div class="col-md-2" style="z-index: 3;">
+                        <!-- class="pbtn lg neu buttons"  -->
+                        <button class="pbtn lg neu buttons" onclick="playPause()">
+                            <!-- <i class="fas fa-play" id="play-pause"></i> -->
+                            <i class="fas fa-play-circle fa-7x" id="play-pause"></i>
+                        </button>
 
-                        <button class="pbtn lg neu buttons" onclick="playPause()"><i class="fas fa-play"
-                                id="play-pause"></i></button>
 
                     </div>
-                    <div class="col-md-2" style="z-index: 3;">
+                    <!-- <div class="col-md-2" style="z-index: 3;">
                         <button class="pbtn lg neu buttons"><i class="fas fa-fast-forward"></i></button>
 
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="row">
-                    <div class="col-md-2" style="margin-left:310px ; margin-top: -200px; z-index: 3; width: 380px; ">
+                    <div class="col-md-2" style="margin-left:310px ; margin-top: -300px; z-index: 3; width: 500px; ">
+                        <!-- <input type="range" style="--min: 0;
+						 --max: 100;
+						 --val: 50"/> -->
                         <div class="track neu" id="outside">
 
                             <div id="inside" style="bottom: 1000px ; ">
-
+                                <input type="range" style="--min: 0;
+						            --max: 100;
+						            --val: 0" />
                             </div>
 
                         </div>
+
 
                         <div class="row" style="margin:2px">
                             <div class="col-md-6" style="color: #808080;">
@@ -182,12 +149,10 @@
 
 
                 <div class="row" style="height:15%;margin:2px;" id="kw-vue">
-
-                    <div class="col-md-12" style="margin-top: -100px;">
+                    <div class="col-md-12" style="margin-top: 0px;">
                         <transition-group name="list-complete" tag="p">
                             <button style="margin:5px ;" v-for="input in inputs" v-bind:key="input[0]" type="button"
-                                class="btn btn-success btn-xs kw-tag list-complete-item" data-toggle="tooltip"
-                                :title="input[1]">
+                                :class="input[3]" data-toggle="tooltip" :title="input[1]">
                                 <a target="_blank" rel="noopener noreferrer" :href="input[2]" style="color:white">%%%
                                     input[0] %%%</a>
                             </button>
@@ -230,53 +195,20 @@
 
 
 
-                <body class="antialiased bg-gray-200 font-sans">
-                    <!-- <div class="flex items-center justify-center min-h-screen"> -->
+                <!-- <body class="antialiased bg-gray-200 font-sans">
                     <div class="max-w-md md:max-w-2xl px-2" style="margin-left:80px; margin-top: 80px;">
                         <div class="bg-white shadow-xl rounded-lg overflow-hidden md:flex">
                             <div class="bg-cover bg-bottom h-56 md:h-auto md:w-56">
-                                <img src="{{ message["poster"] }}">
+                                <img class="img1" src="{{ message["poster"] }}">
                             </div>
                             <div>
                                 <div class="p-4 md:p-5" style="margin-left: 90px;">
                                     <p class="font-bold text-xl md:text-2xl"> {{ message["episode_name"] }}</p>
                                     <p class="text-gray-700 md:text-lg">{{ message["episode_description"] }}</p>
                                 </div>
-                                <!-- <div class="p-4 md:p-5 bg-gray-100"> -->
                                 <div class="sm:flex sm:justify-between sm:items-center">
                                     <div>
-                                        <!-- <div class="text-lg text-gray-700"><span class="text-gray-900 font-bold">17</span> per
-                                                person*</div> -->
                                         <div class="flex items-center">
-                                            <!-- <div class="flex inline-flex -mx-px">
-                                                    <svg class="w-4 h-4 mx-px fill-current text-green-600"
-                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
-                                                        <path
-                                                            d="M6.43 12l-2.36 1.64a1 1 0 0 1-1.53-1.11l.83-2.75a1 1 0 0 0-.35-1.09L.73 6.96a1 1 0 0 1 .59-1.8l2.87-.06a1 1 0 0 0 .92-.67l.95-2.71a1 1 0 0 1 1.88 0l.95 2.71c.13.4.5.66.92.67l2.87.06a1 1 0 0 1 .59 1.8l-2.3 1.73a1 1 0 0 0-.34 1.09l.83 2.75a1 1 0 0 1-1.53 1.1L7.57 12a1 1 0 0 0-1.14 0z" />
-                                                    </svg>
-                                                    <svg class="w-4 h-4 mx-px fill-current text-green-600"
-                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
-                                                        <path
-                                                            d="M6.43 12l-2.36 1.64a1 1 0 0 1-1.53-1.11l.83-2.75a1 1 0 0 0-.35-1.09L.73 6.96a1 1 0 0 1 .59-1.8l2.87-.06a1 1 0 0 0 .92-.67l.95-2.71a1 1 0 0 1 1.88 0l.95 2.71c.13.4.5.66.92.67l2.87.06a1 1 0 0 1 .59 1.8l-2.3 1.73a1 1 0 0 0-.34 1.09l.83 2.75a1 1 0 0 1-1.53 1.1L7.57 12a1 1 0 0 0-1.14 0z" />
-                                                    </svg>
-                                                    <svg class="w-4 h-4 mx-px fill-current text-green-600"
-                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
-                                                        <path
-                                                            d="M6.43 12l-2.36 1.64a1 1 0 0 1-1.53-1.11l.83-2.75a1 1 0 0 0-.35-1.09L.73 6.96a1 1 0 0 1 .59-1.8l2.87-.06a1 1 0 0 0 .92-.67l.95-2.71a1 1 0 0 1 1.88 0l.95 2.71c.13.4.5.66.92.67l2.87.06a1 1 0 0 1 .59 1.8l-2.3 1.73a1 1 0 0 0-.34 1.09l.83 2.75a1 1 0 0 1-1.53 1.1L7.57 12a1 1 0 0 0-1.14 0z" />
-                                                    </svg>
-                                                    <svg class="w-4 h-4 mx-px fill-current text-green-600"
-                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
-                                                        <path
-                                                            d="M6.43 12l-2.36 1.64a1 1 0 0 1-1.53-1.11l.83-2.75a1 1 0 0 0-.35-1.09L.73 6.96a1 1 0 0 1 .59-1.8l2.87-.06a1 1 0 0 0 .92-.67l.95-2.71a1 1 0 0 1 1.88 0l.95 2.71c.13.4.5.66.92.67l2.87.06a1 1 0 0 1 .59 1.8l-2.3 1.73a1 1 0 0 0-.34 1.09l.83 2.75a1 1 0 0 1-1.53 1.1L7.57 12a1 1 0 0 0-1.14 0z" />
-                                                    </svg>
-                                                    <svg class="w-4 h-4 mx-px fill-current text-green-600"
-                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
-                                                        <path
-                                                            d="M6.43 12l-2.36 1.64a1 1 0 0 1-1.53-1.11l.83-2.75a1 1 0 0 0-.35-1.09L.73 6.96a1 1 0 0 1 .59-1.8l2.87-.06a1 1 0 0 0 .92-.67l.95-2.71a1 1 0 0 1 1.88 0l.95 2.71c.13.4.5.66.92.67l2.87.06a1 1 0 0 1 .59 1.8l-2.3 1.73a1 1 0 0 0-.34 1.09l.83 2.75a1 1 0 0 1-1.53 1.1L7.57 12a1 1 0 0 0-1.14 0z" />
-                                                    </svg>
-                                                </div> -->
-                                            <!-- <div class="text-gray-600 ml-2 text-sm md:text-base mt-1">28 reviews
-                                                </div> -->
                                         </div>
                                     </div>
                                     <button
@@ -284,19 +216,39 @@
                                         style="margin-left:90px">Summary
                                     </button>
                                 </div>
-                                <!-- <div class="mt-3 text-gray-600 text-sm md:text-base">*Prices may vary depending on
-                                        selected date.</div> -->
-                                <!-- </div> -->
                             </div>
                         </div>
                     </div>
-                    <!-- </div> -->
+
+                </body> -->
 
 
 
-
-
-                </body>
+                <div class="episode-card-wrapper">
+                    <a href="#" class="episode-card">
+                        <div class="card-header">
+                            <div class="cover-image-wrapper">
+                                <img class="cover-image" width="50px" height="50px" loading="lazy" src="{{ message["poster"] }}">
+                            </div>
+                            <div class="episode-info-wrapper">
+                                <h3 class="title">{{ message["episode_name"] }}</h3>
+                                <div class="info">
+                                    <span class="icon-explicit"></span>
+                                    <span class="channel"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <p class="description">{{ message["episode_description"] }}</p>
+                        </div>
+                        <div class="card-footer">
+                            <span class="date">2021-03-16</span>
+                            <span class="duration">35 mins</span>
+                        </div>
+            
+                    </a>
+            
+                </div>
 
 
 
@@ -375,7 +327,7 @@
                     <div class="max-w-md md:max-w-2xl px-2" style="margin-left:80px; margin-top: 86px;">
                         <div class="bg-white shadow-xl rounded-lg overflow-hidden md:flex">
                             <div class="bg-cover bg-bottom h-56 md:h-auto md:w-56">
-                                <img src="{{ message["poster"] }}">
+                                <img src="{{ message[" poster"] }}">
                             </div>
                             <div>
                                 <div class="p-4 md:p-5" style="margin-left: 90px;">
@@ -452,6 +404,6 @@
 </style>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-<script src="/static/demo3player.js?v=27"></script>
+<script src="/static/demo3player.js?v=73"></script>
 
 </html>
