--- a/main/static/card.css
+++ b/main/static/card.css
@@ -429,10 +429,14 @@
 
 .playInPoster {
     position: absolute;
-    top: 30px;
-    left: 20px;
+    top: 25px;
+    left: 25px;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.7;
+}
+
+.rs-control {
+    opacity: 0.7;
 }
 
 .play-icon:hover .hint {
