--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -68,6 +68,7 @@
                       v-model="sliderValue"
                       start-angle="90"
                       width="28"
+                      radius="105"
                       handle-size="0"
                       show-tooltip="false"
                     ></round-slider>
